--- a/styles.css
+++ b/styles.css
@@ -162,3 +162,41 @@ h1{
     color: #1F2937;
     
 }
+
+/*################...Appointment_Window...############*/
+
+
+.appointment_box{
+        background: #4B91F7;
+        width: 1000px;
+        height: 150px;
+        border-radius: 10px;
+        box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+        display: flex;
+        gap: 20px;
+        padding: 10px;
+        justify-content: center;
+        align-items: center;
+}
+
+.appointment_heading{
+    font-size: 20px;
+}
+
+#appointment_button{
+    margin-left:auto;
+    margin-right: 100px;
+    border: 2px solid white;
+}
+
+.appointment_text{
+    padding-left:25px;
+}
+
+.appointment{
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    align-content: center;
+    padding: 100px 0px;
+}
