--- a/styles.css
+++ b/styles.css
@@ -200,3 +200,16 @@ h1{
     align-content: center;
     padding: 100px 0px;
 }
+
+/*#####################...Footer...###################*/
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0px;
+    background-color: #1F2937;
+}
+
+.footer_text{
+    color:white;
+}
